cfn_benchmark/cfn_templates/AngKokLeong__AWS-Cloud-Architect-Capstone/cloudformation-template/capstone-project-template.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: CUR-TF-200-ACACAD-3 Lab Project

Parameters:

  LatestAL2023AmiId:
    Description: Latest EC2 Amazon Linux 2023 AMI from Systems Manager Parameter Store
    Type: 'AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>'
    Default: '/aws/service/ami-amazon-linux-latest/al2023-ami-kernel-default-x86_64'

  KeyName:
    Type: String
    Description: vockey labsuser.pem (same thing)
    Default: default-lab-key

  DatabaseUserName:
    Type: String
    Description: Enter Database Username
    MinLength: 4
    ConstraintDescription: The username must be between 4 and 16 characters long

  DatabasePassword:
    Type: String
    Description: Enter Database Password
    NoEcho: true
    MinLength: 8

  DatabaseName:
    Type: String
    Description: Enter Database Name
    MinLength: 4
    Default: countries

  AuroraDatabaseClusterMaxCapacity:
    Type: Number
    Description: Enter Aurora Database Cluster Max Capacity
    Default: 8
    MinValue: 2
    MaxValue: 32

  AuroraDatabaseClusterMinCapacity:
    Type: Number
    Description: Enter Aurora Database Cluster Min Capacity
    Default: 0.5
    MinValue: 0.5
    MaxValue: 16

  DatabaseClusterName:
    Type: String
    Description: The name of the Aurora Serverless v2 cluster
    Default: auroradbcluster

  DatabaseClusterEngine:
    Type: String
    Description: The name of the Aurora Serverless v2 cluster
    AllowedValues:
      - aurora-mysql
      - aurora-postgresql

  DatabaseClusterEngineVersion:
    Type: String
    Description: The version of the Aurora Serverless v2 cluster
    Default: 3.04
    AllowedValues:
      - '3.04'
      - '3.05'
      - '3.06'
      - '3.07'

Resources:

##################################################
# NETWORK LAYER
##################################################

###########
# LabVPC with 2 Internet Gateway
# Layer Type: Network Layer
###########

  LabVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: Project VPC

  IGW:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: Project IGW

  VPCtoIGWConnection:
    Type: AWS::EC2::VPCGatewayAttachment
    DependsOn:
      - IGW
      - LabVPC
    Properties:
      InternetGatewayId: !Ref IGW
      VpcId: !Ref LabVPC

  # A NAT Gateway:
  NATGateway:
    Type: AWS::EC2::NatGateway
    DependsOn:
      - ElasticIPAddress
      - PublicSubnet1
    Properties:
      AllocationId: !GetAtt ElasticIPAddress.AllocationId
      ConnectivityType: public
      SubnetId: !Ref PublicSubnet1
      Tags:
      - Key: Name
        Value: !Sub Lab-NATGW
  ElasticIPAddress:
    Type: AWS::EC2::EIP
    DependsOn: LabVPC
    Properties:
      Domain: vpc

  ###########
  # A NAT Gateway in Public Subnet 2: (added on 31/07/2024)
  ###########

  NATGateway2:
    Type: AWS::EC2::NatGateway
    DependsOn:
      - ElasticIPAddress2
      - PublicSubnet2
    Properties:
      AllocationId: !GetAtt ElasticIPAddress2.AllocationId
      ConnectivityType: public
      SubnetId: !Ref PublicSubnet2
      Tags:
      - Key: Name
        Value: !Sub Lab-NATGW2
  ElasticIPAddress2:
    Type: AWS::EC2::EIP
    DependsOn: LabVPC
    Properties:
      Domain: vpc

###########
# Public Subnets x 2
# Layer Type: Network Layer
###########

  PublicSubnet1:
    Type: AWS::EC2::Subnet
    DependsOn: LabVPC
    Properties:
      VpcId: !Ref LabVPC
      MapPublicIpOnLaunch: true
      CidrBlock: 10.0.1.0/24
      AvailabilityZone: !Select
        - 0
        - !GetAZs
          Ref: AWS::Region
      Tags:
        - Key: Name
          Value: Public Subnet 1

  PublicSubnet2:
    Type: AWS::EC2::Subnet
    DependsOn: LabVPC
    Properties:
      VpcId: !Ref LabVPC
      MapPublicIpOnLaunch: true
      CidrBlock: 10.0.2.0/24
      AvailabilityZone: !Select
        - 1
        - !GetAZs
          Ref: AWS::Region
      Tags:
        - Key: Name
          Value: Public Subnet 2

###########
# Route Table Association
# Layer Type: Network Layer
###########

  PublicRouteTableAssociation1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    DependsOn:
      - PublicRouteTable
      - PublicSubnet1
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet1

  PublicRouteTableAssociation2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    DependsOn:
      - PublicRouteTable
      - PublicSubnet2
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet2

###########
# Public Route Table
# Layer Type: Network Layer
###########

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    DependsOn: LabVPC
    Properties:
      VpcId: !Ref LabVPC
      Tags:
        - Key: Name
          Value: Public Route Table

  PublicRoute:
    Type: AWS::EC2::Route
    DependsOn:
      - PublicRouteTable
      - VPCtoIGWConnection
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref IGW
      RouteTableId: !Ref PublicRouteTable

###########
# Private App Subnets x 2
# Layer Type: Network Layer
###########

  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    DependsOn: LabVPC
    Properties:
      VpcId: !Ref LabVPC
      CidrBlock: 10.0.3.0/24
      AvailabilityZone: !Select
        - 0
        - !GetAZs
          Ref: AWS::Region
      Tags:
        - Key: Name
          Value: Private Subnet 1

  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    DependsOn: LabVPC
    Properties:
      VpcId: !Ref LabVPC
      CidrBlock: 10.0.4.0/24
      AvailabilityZone: !Select
        - 1
        - !GetAZs
          Ref: AWS::Region
      Tags:
        - Key: Name
          Value: Private Subnet 2

###########
# Private Route Table App
# Layer Type: Network Layer
###########

  PrivateRouteTableApp:
    Type: AWS::EC2::RouteTable
    DependsOn:
      - LabVPC
    Properties:
      VpcId: !Ref LabVPC
      Tags:
        - Key: Name
          Value: Private Route Table App

  PrivateRouteApp:            # Private route table can access web via NAT (created below)
    Type: AWS::EC2::Route
    DependsOn:
      - PrivateRouteTableApp
      - NATGateway
    Properties:
      RouteTableId: !Ref PrivateRouteTableApp
      DestinationCidrBlock: 0.0.0.0/0
      # Route traffic through the NAT Gateway:
      NatGatewayId: !Ref NATGateway

  PrivateRouteApp2:            # Private route table can access web via NAT (created below)
    Type: AWS::EC2::Route
    DependsOn:
      - PrivateRouteTableApp
      - NATGateway2
    Properties:
      RouteTableId: !Ref PrivateRouteTableApp
      DestinationCidrBlock: 0.0.0.0/24
      # Route traffic through the NAT Gateway:
      NatGatewayId: !Ref NATGateway2

###########
# Private Route Table Association
# Layer Type: Network Layer
###########

  PrivateRouteTableAssociation1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    DependsOn:
      - PrivateRouteTableApp
      - PrivateSubnet1
    Properties:
      RouteTableId: !Ref PrivateRouteTableApp
      SubnetId: !Ref PrivateSubnet1

  PrivateRouteTableAssociation2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    DependsOn:
      - PrivateRouteTableApp
      - PrivateSubnet2
    Properties:
      RouteTableId: !Ref PrivateRouteTableApp
      SubnetId: !Ref PrivateSubnet2

###########
# Private DB Route Table
# Layer Type: Network Layer
###########

  PrivateRouteTableDB:
    Type: AWS::EC2::RouteTable
    DependsOn: LabVPC
    Properties:
      VpcId: !Ref LabVPC
      Tags:
        - Key: Name
          Value: Private DB Route Table

###########
# Private DB Subnets x 2
# Layer Type: Network Layer
###########

  PrivateDBSubnet1:
    Type: AWS::EC2::Subnet
    DependsOn: LabVPC
    Properties:
      VpcId: !Ref LabVPC
      CidrBlock: 10.0.5.0/24
      AvailabilityZone: !Select
        - 0
        - !GetAZs
          Ref: AWS::Region
      Tags:
        - Key: Name
          Value: Private DB Subnet 1

  PrivateDBSubnet2:
    Type: AWS::EC2::Subnet
    DependsOn: LabVPC
    Properties:
      VpcId: !Ref LabVPC
      CidrBlock: 10.0.6.0/24
      AvailabilityZone: !Select
        - 1
        - !GetAZs
          Ref: AWS::Region
      Tags:
        - Key: Name
          Value: Private DB Subnet 2

###########
# Private DB Route Table Association
# Layer Type: Network Layer
###########

  PrivateRouteTableAssociationDB1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    DependsOn:
      - PrivateRouteTableDB
      - PrivateDBSubnet1
    Properties:
      RouteTableId: !Ref PrivateRouteTableDB
      SubnetId: !Ref PrivateDBSubnet1

  PrivateRouteTableAssociationDB2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    DependsOn:
      - PrivateRouteTableDB
      - PrivateDBSubnet2
    Properties:
      RouteTableId: !Ref PrivateRouteTableDB
      SubnetId: !Ref PrivateDBSubnet2

##########
# Application Load Balancer (added on 31/07/2024)
# Layer Type: Network Layer
##########

  ApplicationLoadBalancer:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    DependsOn:
      - PublicSubnet1
      - PublicSubnet2
      - ALBSecurityGroup
    Properties:
      Name: app-LB
      Scheme: internet-facing
      IpAddressType: ipv4
      SecurityGroups:
        - !GetAtt ALBSecurityGroup.GroupId
      Subnets:
        - !Ref PublicSubnet1
        - !Ref PublicSubnet2
      Type: application

# Need to configure listeners for the application load balancer
  ALBListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    DependsOn:
      - AppTargetGroup
    Properties:
      DefaultActions:
        - Type: forward
          TargetGroupArn: !GetAtt AppTargetGroup.TargetGroupArn
      LoadBalancerArn: !GetAtt ApplicationLoadBalancer.LoadBalancerArn
      Port: 80
      Protocol: HTTP

# Need to configure Target Group for ApplicationLoadBalancer
  AppTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    DependsOn:
      - LabVPC
      - WebServer1
      - WebServer2
    Properties:
      Port: 80
      Protocol: HTTP
      VpcId: !Ref LabVPC
      HealthCheckIntervalSeconds: 30
      HealthCheckPath: /
      HealthCheckProtocol: HTTP
      HealthCheckTimeoutSeconds: 5
      HealthyThresholdCount: 2
      TargetType: instance
      TargetGroupAttributes:
        - Key: stickiness.enabled
          Value: true
        - Key: stickiness.type
          Value: app_cookie
        - Key: stickiness.app_cookie.duration_seconds
          Value: 30
        - Key: stickiness.app_cookie.cookie_name
          Value: TESTCOOKIE

##################################################
# SECURITY LAYER
##################################################

###########
# IAM Role for App
# Layer Type: Security Layer
###########

  InstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Path: /
      Roles: [!Ref AppRole]
      InstanceProfileName: Inventory-App-Role

  AppRole:
    Type: AWS::IAM::Role
    Properties:
      RoleName: Inventory-App-Role
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/ReadOnlyAccess
        - arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - ec2.amazonaws.com
            Action:
              - sts:AssumeRole
      Path: /
      Policies:
        - PolicyName: secretsaccess
          PolicyDocument:
            Version: 2012-10-17
            Statement:
              - Effect: Allow
                Action:
                      - secretsmanager:CreateSecret
                      - secretsmanager:GetSecretValue
                      - secretsmanager:DescribeSecret
                      - secretsmanager:PutSecretValue
                      - secretsmanager:ListSecrets
                      - secretsmanager:UpdateSecret
                Resource: !Sub arn:aws:secretsmanager:*:${AWS::AccountId}:secret:*

###########
# Linux Bastion Security Group
# Layer Type: Security Layer
###########

  LinuxBastionSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    DependsOn: LabVPC
    Properties:
      GroupName: Linux-Bastion-SG
      GroupDescription: Enable access to SSH
      VpcId: !Ref LabVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0 #Allow HTTP Traffic from any IPv4 address
      Tags:
        - Key: Name
          Value: Linux-Bastion-Security-Group

###########
# Web Server SSH Security Group
# Layer Type: Security Layer
###########

  WebServerSSHSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    DependsOn: LabVPC
    Properties:
      GroupName: Web-Server-SSH-SG
      GroupDescription: Enable access to SSH
      VpcId: !Ref LabVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          SourceSecurityGroupId: !GetAtt LinuxBastionSecurityGroup.GroupId
      Tags:
        - Key: Name
          Value: Web-Server-SSH-Security-Group

###########
# ALB Security Group
# Layer Type: Security Layer
###########

  ALBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    DependsOn: LabVPC
    Properties:
      GroupName: ALBSG
      GroupDescription: Port 80
      VpcId: !Ref LabVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: ALBSG

###########
# App Security Group
# Layer Type: Security Layer
###########

  AppSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    DependsOn:
      - LabVPC
      - ALBSecurityGroup
    Properties:
      GroupName: Inventory-App
      GroupDescription: Enable access to App
      VpcId: !Ref LabVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          SourceSecurityGroupId: !Ref ALBSecurityGroup
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          SourceSecurityGroupId: !Ref ALBSecurityGroup
      Tags:
        - Key: Name
          Value: Inventory-App

###########
# DB Security Group
# Layer Type: Security Layer
###########

  DBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    DependsOn:
      - LabVPC
      - AppSecurityGroup
    Properties:
      GroupName: ExampleDB-SG
      GroupDescription: Enable access to MySQL
      VpcId: !Ref LabVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
          SourceSecurityGroupId: !Ref AppSecurityGroup
      Tags:
        - Key: Name
          Value: ExampleD-BSG

## Create DB subnet group
  DBSubnetGroup:
    Type: AWS::RDS::DBSubnetGroup
    DependsOn:
      - PrivateDBSubnet1
      - PrivateDBSubnet2
    Properties:
      DBSubnetGroupDescription: Example-DB-subnet-group
      SubnetIds: [ !Ref PrivateDBSubnet1, !Ref PrivateDBSubnet2 ]
      Tags:
        - Key: Name
          Value: Example-DB-subnet-group

###########
# Linux Bastion Host One Key Pair
# Layer Type: Security Layer
###########
  LinuxBastionHostOneKeyPair:
    Type: AWS::EC2::KeyPair
    Properties:
      KeyName: Linux-Bastion-Host-One-Key-Pair

###########
# Linux Bastion Host Two Key Pair
# Layer Type: Security Layer
###########
  LinuxBastionHostTwoKeyPair:
    Type: AWS::EC2::KeyPair
    Properties:
      KeyName: Linux-Bastion-Host-Two-Key-Pair

###########
# Web Server One Key Pair
# Layer Type: Security Layer
###########
  WebServerOneKeyPair:
    Type: AWS::EC2::KeyPair
    Properties:
      KeyName: Web-Server-One-Key-Pair

###########
# Web Server Two Key Pair
# Layer Type: Security Layer
###########
  WebServerTwoKeyPair:
    Type: AWS::EC2::KeyPair
    Properties:
      KeyName: Web-Server-Two-Key-Pair

##################################################
# COMPUTE LAYER
##################################################

##########
# EC2 Instance - Linux Bastion Host 1
# Layer Type: Compute Layer
##########

  LinuxBastionHost1:
    Type: AWS::EC2::Instance
    DependsOn:
      - LinuxBastionHostOneKeyPair
      - LinuxBastionSecurityGroup
      - PublicSubnet1
    Properties:
      InstanceType: t2.micro
      ImageId: !Ref LatestAL2023AmiId
      SubnetId: !Ref PublicSubnet1
      KeyName: !Ref LinuxBastionHostOneKeyPair
      SecurityGroupIds:
        - !Ref LinuxBastionSecurityGroup
      Tags:
        - Key: Name
          Value: LinuxBastionHost1
      BlockDeviceMappings:
        - DeviceName: /dev/xvda
          Ebs:
            VolumeSize: 10
            VolumeType: gp3
            DeleteOnTermination: true
            Encrypted: true
        - DeviceName: /dev/xvdb
          NoDevice: {}
      Monitoring: false

##########
# EC2 Instance - Linux Bastion Host 2
# Layer Type: Compute Layer
##########

  LinuxBastionHost2:
    Type: AWS::EC2::Instance
    DependsOn:
      - LinuxBastionHostTwoKeyPair
      - LinuxBastionSecurityGroup
      - PublicSubnet2
    Properties:
      InstanceType: t2.micro
      ImageId: !Ref LatestAL2023AmiId
      SubnetId: !Ref PublicSubnet2
      KeyName: !Ref LinuxBastionHostTwoKeyPair
      SecurityGroupIds:
        - !Ref LinuxBastionSecurityGroup
      Tags:
        - Key: Name
          Value: LinuxBastionHost2
      BlockDeviceMappings:
        - DeviceName: /dev/xvda
          Ebs:
            VolumeSize: 10
            VolumeType: gp3
            DeleteOnTermination: true
            Encrypted: true
        - DeviceName: /dev/xvdb
          NoDevice: {}
      Monitoring: false

##########
# EC2 Instance - Web Server 1
# Layer Type: Compute Layer
##########

  WebServer1:
    Type: AWS::EC2::Instance
    DependsOn:
      - AppSecurityGroup
      - WebServerSSHSecurityGroup
      - WebServerOneKeyPair
      - PrivateSubnet1
      - InstanceProfile
    Properties:
      InstanceType: t2.micro
      ImageId: !Ref LatestAL2023AmiId
      SubnetId: !Ref PrivateSubnet1
      KeyName: !Ref WebServerOneKeyPair
      SecurityGroupIds:
        - !Ref AppSecurityGroup
        - !Ref WebServerSSHSecurityGroup
      UserData:
        Fn::Base64: !Sub |
              #!/bin/bash -ex
                dnf -y update

                dnf -y install php8.2
                dnf -y install mariadb105-server
                dnf install -y php-mysqli
                dnf -y install git
                dnf -y install stress

                cd /var/www/html/

                # Clone the Git Repository containing the Sample PHP application
                sudo git clone https://github.com/AngKokLeong/AWS-Cloud-Architect-Capstone-Sample-PHP-Application.git

                # Move every item from AWS-Cloud-Architect-Capstone-Sample-PHP-Application to /var/www/html/
                sudo mv AWS-Cloud-Architect-Capstone-Sample-PHP-Application/* ./
                sudo rm -rf AWS-Cloud-Architect-Capstone-Sample-PHP-Application

                chkconfig httpd on
                service httpd start

                wget https://aws-tc-largeobjects.s3.us-west-2.amazonaws.com/CUR-TF-200-ACACAD-2/21-course-project/s3/Countrydatadump.sql

                # Command to import sql data
                # mysql --host=<Aurora DB Cluster Writer Endpoint> --database=countries --port=3306  --user=<Database Cluster User Name> --password < Countrydatadump.sql

                chown ec2-user:ec2-user Countrydatadump.sql

                chown -R ec2-user:ec2-user /var/www/html
      Tags:
        - Key: Name
          Value: WebServer1
      IamInstanceProfile: !Ref InstanceProfile
      BlockDeviceMappings:
        - DeviceName: /dev/xvda
          Ebs:
            VolumeSize: 10
            VolumeType: gp3
            DeleteOnTermination: true
            Encrypted: true
        - DeviceName: /dev/xvdb
          NoDevice: {}
      Monitoring: false

##########
# EC2 Instance - Web Server 2
# Layer Type: Compute Layer
##########

  WebServer2:
    Type: AWS::EC2::Instance
    DependsOn:
      - WebServerTwoKeyPair
      - WebServerSSHSecurityGroup
      - AppSecurityGroup
      - PrivateSubnet2
      - InstanceProfile
    Properties:
      InstanceType: t2.micro
      ImageId: !Ref LatestAL2023AmiId
      SubnetId: !Ref PrivateSubnet2
      KeyName: !Ref WebServerTwoKeyPair
      SecurityGroupIds:
        - !Ref AppSecurityGroup
        - !Ref WebServerSSHSecurityGroup
      UserData:
        Fn::Base64: !Sub |
              #!/bin/bash -ex
                dnf -y update

                dnf -y install php8.2
                dnf -y install mariadb105-server
                dnf install -y php-mysqli
                dnf -y install git
                dnf -y install stress

                cd /var/www/html/

                # Clone the Git Repository containing the Sample PHP application
                sudo git clone https://github.com/AngKokLeong/AWS-Cloud-Architect-Capstone-Sample-PHP-Application.git

                # Move every item from AWS-Cloud-Architect-Capstone-Sample-PHP-Application to /var/www/html/
                sudo mv AWS-Cloud-Architect-Capstone-Sample-PHP-Application/* ./
                sudo rm -rf AWS-Cloud-Architect-Capstone-Sample-PHP-Application

                chkconfig httpd on
                service httpd start

                wget https://aws-tc-largeobjects.s3.us-west-2.amazonaws.com/CUR-TF-200-ACACAD-2/21-course-project/s3/Countrydatadump.sql

                # Command to import sql data
                # mysql --host=<Aurora DB Cluster Writer Endpoint> --database=countries --port=3306  --user=<Database Cluster User Name> --password < Countrydatadump.sql

                chown ec2-user:ec2-user Countrydatadump.sql

                chown -R ec2-user:ec2-user /var/www/html
      Tags:
        - Key: Name
          Value: WebServer2
      IamInstanceProfile: !Ref InstanceProfile
      BlockDeviceMappings:
        - DeviceName: /dev/xvda
          Ebs:
            VolumeSize: 10
            VolumeType: gp3
            DeleteOnTermination: true
            Encrypted: true
        - DeviceName: /dev/xvdb
          NoDevice: {}
      Monitoring: false

##########
# Auto Scaling Group
# Layer Type: Compute Layer
##########

  AutoScalingGroup:
    Type: AWS::AutoScaling::AutoScalingGroup
    DependsOn:
      - ExampleLaunchTemplate
      - PrivateSubnet1
      - PrivateSubnet2
    Properties:
      VPCZoneIdentifier:
        - Fn::GetAtt: [PrivateSubnet1, SubnetId]
        - Fn::GetAtt: [PrivateSubnet2, SubnetId]
      LaunchTemplate:
        LaunchTemplateId: !Ref ExampleLaunchTemplate
        Version: !GetAtt ExampleLaunchTemplate.LatestVersionNumber
      MinSize: 2
      MaxSize: 2
      DesiredCapacity: 2
      HealthCheckGracePeriod: 300
      HealthCheckType: ELB
      TargetGroupARNs:
        - !GetAtt AppTargetGroup.TargetGroupArn
      Tags:
        - Key: Name
          Value: WebServerAutoScalingGroup
          PropagateAtLaunch: true

  TargetTrackingScalingPolicy:
    Type: AWS::AutoScaling::ScalingPolicy
    Properties:
      AutoScalingGroupName: !Ref AutoScalingGroup
      PolicyType: TargetTrackingScaling
      TargetTrackingConfiguration:
        PredefinedMetricSpecification:
          PredefinedMetricType: ASGAverageCPUUtilization
        TargetValue: 70.0

##########
# Launch template
# Layer Type: Compute Layer
##########

  ExampleLaunchTemplate:
    Type: AWS::EC2::LaunchTemplate
    DependsOn:
      - AppSecurityGroup
    Properties:
      LaunchTemplateData:
        InstanceType: t2.micro
#        KeyName: !Ref KeyName
        ImageId: !Ref LatestAL2023AmiId
        TagSpecifications:
          - ResourceType: instance
            Tags:
            - Key: Name
              Value: ExampleAPP

        IamInstanceProfile:
          Arn:
            Fn::GetAtt:
            - InstanceProfile
            - Arn
        SecurityGroupIds:
            - !Ref AppSecurityGroup
        UserData:
          Fn::Base64: !Sub |
              #!/bin/bash -ex
                dnf -y update

                dnf -y install php8.2
                dnf -y install mariadb105-server
                dnf install -y php-mysqli
                dnf -y install git
                dnf -y install stress

                cd /var/www/html/

                # Clone the Git Repository containing the Sample PHP application
                sudo git clone https://github.com/AngKokLeong/AWS-Cloud-Architect-Capstone-Sample-PHP-Application.git

                # Move every item from AWS-Cloud-Architect-Capstone-Sample-PHP-Application to /var/www/html/
                sudo mv AWS-Cloud-Architect-Capstone-Sample-PHP-Application/* ./
                sudo rm -rf AWS-Cloud-Architect-Capstone-Sample-PHP-Application

                chkconfig httpd on
                service httpd start

                wget https://aws-tc-largeobjects.s3.us-west-2.amazonaws.com/CUR-TF-200-ACACAD-2/21-course-project/s3/Countrydatadump.sql

                # Command to import sql data
                # mysql --host=<Aurora DB Cluster Writer Endpoint> --database=countries --port=3306  --user=<Database Cluster User Name> --password < Countrydatadump.sql

                chown ec2-user:ec2-user Countrydatadump.sql

                chown -R ec2-user:ec2-user /var/www/html

      LaunchTemplateName: Project-LT

##################################################
# DATABASE LAYER
##################################################

#############
# Aurora Serverless Database Password Secret
# Layer Type: Database Layer
#############
  DatabasePasswordSecret:
    Type: AWS::SecretsManager::Secret
    Properties:
      Name: capstoneprojectv2/databasePassword
      SecretString: !Ref DatabasePassword
      Description: Database password for the Database that PHP Application will use to access

#############
# Aurora Serverless Database Username Secret
# Layer Type: Database Layer
#############
  DatabaseUserNameSecret:
    Type: AWS::SecretsManager::Secret
    Properties:
      Name: capstoneprojectv2/databaseUsername
      SecretString: !Ref DatabaseUserName
      Description: Database Username for the Database that PHP Application will use to access

#############
# Aurora Serverless Database Name Secret
# Layer Type: Database Layer
#############
  DatabaseNameSecret:
    Type: AWS::SecretsManager::Secret
    Properties:
      Name: capstoneprojectv2/databaseName
      SecretString: !Ref DatabaseName
      Description: Database Name for the Database that PHP Application will use to access

#############
# Aurora Serverless Database Cluster Endpoint Secret
# Layer Type: Database Layer
#############
  AuroraDatabaseClusterEndpointSecret:
    Type: AWS::SecretsManager::Secret
    DependsOn: AuroraServerlessDatabaseCluster
    Properties:
      Name: capstoneprojectv2/databaseClusterEndpoint
      SecretString: !GetAtt AuroraServerlessDatabaseCluster.Endpoint.Address
      Description: Aurora Database Cluster Endpoint Address

##########
# Aurora Serverless Database Template
# Layer Type: Database Layer
##########

# https://docs.aws.amazon.com/AmazonRDS/latest/AuroraUserGuide/aurora-serverless-v2.setting-capacity.html#aurora-serverless-v2.max_capacity_considerations
# 8 ACU Can support a maximum connection of 1000 for Aurora MYSQL
# 0.5 ACU can support a maximum connection of 45 for Aurora MYSQL

  AuroraServerlessDatabaseCluster:
    Type: AWS::RDS::DBCluster
    DependsOn:
      - DBSecurityGroup
      - DBSubnetGroup
    Properties:
      DBClusterIdentifier: !Ref DatabaseClusterName
      Engine: aurora-mysql
      DBSubnetGroupName: !Ref DBSubnetGroup
      DatabaseName: !Ref DatabaseName
      MasterUsername: !Ref DatabaseUserName
      MasterUserSecret:
        SecretArn: !Ref DatabasePasswordSecret
      ManageMasterUserPassword: true
      VpcSecurityGroupIds:
        - Fn::GetAtt: [DBSecurityGroup, GroupId]
      DeletionProtection: false
      ServerlessV2ScalingConfiguration:
        MaxCapacity: !Ref AuroraDatabaseClusterMaxCapacity
        MinCapacity: !Ref AuroraDatabaseClusterMinCapacity
      Tags:
        - Key: Name
          Value: !Ref DatabaseClusterName

  RDSDBInstance1:
      Type: 'AWS::RDS::DBInstance'
      DependsOn:
        - AuroraServerlessDatabaseCluster
      Properties:
        Engine: aurora-mysql
        DBInstanceClass: db.serverless
        DBClusterIdentifier: !Ref AuroraServerlessDatabaseCluster

  RDSDBInstance2:
      Type: 'AWS::RDS::DBInstance'
      DependsOn:
        - AuroraServerlessDatabaseCluster
      Properties:
        Engine: aurora-mysql
        DBInstanceClass: db.serverless
        DBClusterIdentifier: !Ref AuroraServerlessDatabaseCluster

Outputs:
  LoadBalancerDNS:
    Description: The DNS name of the Application Load Balancer
    Value: !GetAtt ApplicationLoadBalancer.DNSName

  LinuxBastionHostOneKeyPairID:
    Value: !GetAtt LinuxBastionHostOneKeyPair.KeyPairId
    Description: Key Pair ID for Linux Bastion Host One

  LinuxBastionHostTwoKeyPairID:
    Value: !GetAtt LinuxBastionHostTwoKeyPair.KeyPairId
    Description: Key Pair ID for Linux Bastion Host Two

  WebServerOneKeyPairID:
    Value: !GetAtt WebServerOneKeyPair.KeyPairId
    Description: Key Pair ID for Web Server One

  WebServerTwoKeyPairID:
    Value: !GetAtt WebServerTwoKeyPair.KeyPairId
    Description: Key Pair ID for Web Server Two

  WebServerOnePrivateIPAddress:
    Value: !GetAtt WebServer1.PrivateIp
    Description: Private IP Address for Web Server One

  WebServerTwoPrivateIPAddress:
    Value: !GetAtt WebServer2.PrivateIp
    Description: Private IP Address for Web Server Two

  LinuxBastionHostOnePublicIPAddress:
    Value: !GetAtt LinuxBastionHost1.PublicIp
    Description: Public IP Address for Linux Bastion Host One

  LinuxBastionHostTwoPublicIPAddress:
    Value: !GetAtt LinuxBastionHost2.PublicIp
    Description: Public IP Address for Linux Bastion Host Two

  DatabaseName:
    Value: !Ref DatabaseName
    Description: Database Name

  VpcId:
    Value: !GetAtt LabVPC.VpcId
    Description: VPC ID

  AuroraServerlessDatabaseClusterMinACU:
    Description: The minimum ACU for the Aurora Serverless v2 cluster
    Value: !Ref AuroraDatabaseClusterMinCapacity

  AuroraServerlessDatabaseClusterMaxACU:
    Description: The maximum ACU for the Aurora Serverless v2 cluster
    Value: !Ref AuroraDatabaseClusterMaxCapacity

  AuroraServerlessDatabaseEndpointAddress:
    Description: The endpoint address for the Aurora Serverless v2 cluster
    Value: !GetAtt AuroraServerlessDatabaseCluster.Endpoint.Address
